[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Scripts/Cursor.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/mouse_0.png" type="Texture" id=2]
[ext_resource path="res://Assets/Scripts/Interactuable.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 103.79, 62.4148 )

[node name="TestScene" type="Node2D"]

[node name="Interactuable" type="Area2D" parent="."]
position = Vector2( 196.326, 135.918 )
collision_mask = 0
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interactuable"]
shape = SubResource( 1 )

[node name="Cursor" type="Sprite" parent="."]
scale = Vector2( 0.35, 0.35 )
texture = ExtResource( 2 )
script = ExtResource( 1 )
[connection signal="input_event" from="Interactuable" to="Interactuable" method="_on_Interactuable_input_event"]
[connection signal="mouse_entered" from="Interactuable" to="Interactuable" method="_on_Interactuable_mouse_entered"]
[connection signal="mouse_exited" from="Interactuable" to="Interactuable" method="_on_Interactuable_mouse_exited"]
